Ensure search widget doesn't LF on iPhone SE
Thanks Philippe.

--- a/textpattern/admin-themes/hive/assets/css/textpattern.css
+++ b/textpattern/admin-themes/hive/assets/css/textpattern.css
@@ -1331,8 +1331,7 @@ button {
  * Reverse the progress direction in RTL languages.
  */
   [dir="rtl"] progress {
-    -webkit-animation-direction: reverse;
-            animation-direction: reverse;
+    animation-direction: reverse;
   }
   /* Buttons
    ========================================================================== */
@@ -2678,6 +2677,9 @@ button {
   }
   .txp-search .txp-dropdown {
     z-index: 101;
+  }
+  .txp-search-input {
+    max-width: calc(100% - 5.5rem);
   }
   .txp-search-clear {
     -webkit-box-flex: 1;
@@ -5533,8 +5535,7 @@ button {
  * Reverse the progressbar direction in RTL languages.
  */
   [dir="rtl"] .ui-progressbar-value {
-    -webkit-animation-direction: reverse;
-            animation-direction: reverse;
+    animation-direction: reverse;
   }
   /* Selectmenu
    ========================================================================== */
